# GeneHunter

./: .clang-format  .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.md  README.md
ArgumentParser/: .cproject  CMakeLists.txt
ArgumentParser/include/BrainTwister/: ArgumentParser.h  Value.h
ArgumentParser/src/: ArgumentParser.cpp
ArgumentParser/test/: ArgumentParser.cpp
cmake/modules/: FindMySQL.cmake
doxygen/: .gitignore  Doxyfile  Doxyfile.in
settings/: CDSDatabaseBuilderSettings.xml  FullMatchManagerSettings.xml  GeneAssemblerSettings.xml  GeneHunterSettings.xml  bashrc
src/: CMakeLists.txt
src/BoostLib/boost/serialization/: array.h  unordered_collections_save_imp.hpp  unordered_map.hpp  unordered_set.hpp
src/CDSDatabaseBuilder/: CDSDatabaseBuilder.cpp  CMakeLists.txt
src/DatabaseBuilder/: CMakeLists.txt  DatabaseBuilder.cpp  FASTAExtractor.cpp
src/GeneAssembler/: CMakeLists.txt  GeneAssembler.cpp
src/GeneHunter/: CMakeLists.txt  GeneHunter.cpp
src/GenomeLib/: CDSDatabase.cpp  CDSDatabase.h  CDSDatabaseMemoryBased.h  CDSDatabaseSqlBased.h  CDSEntry.h  CDSIterator.cpp  CDSIterator.h  CMakeLists.txt  CharTypes.cpp  CharTypes.h  CompressedCharFourInOne.cpp  CompressedCharFourInOne.h  CompressedCharThreeInOne.h  CompressedCharTwoInOne.cpp  CompressedCharTwoInOne.h  FASTA.h  FASTAIterator.h  FASTQ.h  FASTQIterator.h  FixedSizeHashMapSearch.h  FullMatchManager.cpp  FullMatchManager.h  Gene.h  Genome.h  GetCompressedIndex.h  LocalAlignment.cpp  LocalAlignment.h  Location.cpp  Location.h  Match.h  MatchGenerator.h  NucleotideDatabase.h  NucleotideDatabaseInformation.cpp  NucleotideDatabaseInformation.h  NucleotideDatabaseIterator.h  Organism.cpp  Organism.h  OrganismsDataset.cpp  OrganismsDataset.h  OrganismsReport.cpp  (+13 more)
src/GenomeTest/: CMakeLists.txt  SequenceTest.cpp
src/TaxonomyDatabaseBuilder/: CMakeLists.txt  TaxonomyDatabaseBuilder.cpp  TaxonomyWriter.cpp  TaxonomyWriter.h
src/UtilitiesLib/: ArgumentInterpreter.cpp  ArgumentInterpreter.h  BandMatrix.h  CMakeLists.txt  CreateDataClass.h  Environment.cpp  Environment.h  EnvironmentVariables.cpp  EnvironmentVariables.h  FatalError.h  FileIO.h  Filesystem.h  GeneAssemblerException.h  GeneHunterException.h  HashFunctions.h  Helpers.h  Matrix.h  Power.h  StringUtilities.cpp  StringUtilities.h  Version.h.in  printHashTableState.h
src/UtilitiesTest/: BandMatrixTest.cpp  CMakeLists.txt
test/: CMakeLists.txt
test/GenomeTest/: CDSDatabaseTest.cpp  CMakeLists.txt  FASTAIteratorTest.cpp  FASTQIteratorTest.cpp  FullMatchManagerTest.cpp  GBConDatabaseTest.cpp  GeneTest.cpp  LocalAlignmentTest.cpp  LocationTest.cpp  OrganismsReportTest.cpp  QualityTest.cpp  ReferenceDatabaseTest.cpp  SequenceTest.cpp  SequenceTokenTest.cpp  TaxonomyTest.cpp  TokenIteratorTest.cpp  VariantTest.cpp  VariantsTest.cpp
test/UtilitiesTest/: BandMatrixTest.cpp  CMakeLists.txt
